--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: sudo apt-get install -y libxml2
+    - run: sudo apt-get install -y libxml2-dev
     - name: Build
       run: swift build
     - name: Run tests
